# reasoning_benchmark

./: .containerignore  .env.example  .gitignore  Containerfile  README.md  benchmark_analyze.py  logging.json  logging.json.example  main.py  pyproject.toml  tested_models.json
cloud_run/: .env.example  add_image.py  create_new_project.sh  create_project.env.example  create_project.sh  get_results.py  optional_vertex_access.sh  policy.json  run_benchmark.py  run_benchmark_in_batch.py
docs/: cloud_run.md  methodology.md  strategies.md
logs/: maintain_strategy_o3_logs.json
prompts/: maintain_strategy.md  simple_move.md
settings_example/: analyze.env  api_keys.env  application.env  benchmark.env  engine.env  logging.json
src/: conts.py  enums.py  game.py  logging_config.py  main.py  models.py  models_adapter.py  prompts.py  pydantic_models.py  settings.py  strategy.py
src/chess_logic/: game.py  llm_schemas.py  prompts.py  strategies.py  strategy.py
src/dependencies/: colors.py  concurency.py  engine.py  file_storage.py  games.py  llm.py  serialization.py
src/domain/: enums.py  exceptions.py  game.py  protocols.py  schemas.py  serialization.py  types.py
src/domain/llm/: enums.py  prompts.py  responses.py  strategies.py
src/domain/services/: concurency.py  game.py  moves.py  running.py  serialization.py
src/domain/utils/: helpers.py
src/domain/value_objects/: benchmark.py  board.py  game.py  pydantic_models.py  results.py
src/infrastructure/: file_storage.py  gc_result_saver.py  local_result_saver.py  models_adapter.py
src/metrics/: models.py  scoring.py  serialization.py
src/share/: conts.py  custom_types.py  enums.py  exceptions.py  logging_config.py  settings.py
src/share/settings/: app.py  benchmark.py  engine.py
src/utils/: helpers.py  models_adapter.py  serialization.py
