[project]
name = "reasoning-benchamrk"
version = "0.46.0"
description = "Reasoning language models benchmark, by playing chess."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess==1.11.*",
    "litellm==1.77.*",
    "pydantic==2.11.*",
    "pydantic-settings==2.11.*",
    "python-dotenv==1.1.1",
    "tenacity==9.1.*",
]

[dependency-groups]
dev = [
    "black==25.9.*",
    "google-auth-oauthlib==1.2.*",
    "google-cloud-batch==0.17.*",
    "isort==6.0.*"
]
google-cloud = [
    "google-cloud-storage==2.19.*",
    "google-cloud-aiplatform==1.115.*"
]


[tool.black]
line-length = 120
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
skip = [".venv"]
