[project]
name = "reasoning-benchamrk"
version = "0.47.2"
description = "Reasoning language models benchmark, by playing chess."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess==1.11.*",
    "litellm==1.80.*",
    "pydantic==2.12.*",
    "pydantic-settings==2.12.*",
    "python-dotenv==1.2.1",
    "tenacity==9.1.*",
]

[dependency-groups]
dev = [
    "black==25.12.*",
    "google-auth-oauthlib==1.2.*",
    "google-cloud-batch==0.19.*",
    "isort==7.0.*"
]
google-cloud = [
    "google-cloud-storage==3.7.*",
    "google-cloud-aiplatform==1.132.*"
]


[tool.black]
line-length = 120
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
skip = [".venv"]
