[project]
name = "reasoning-benchmark"
version = "0.52.0"
description = "Reasoning language models benchmark, by playing chess."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess==1.11.*",
    "jinja2==3.1.*",
    "litellm==1.81.*",
    "pydantic==2.12.*",
    "pydantic-settings==2.12.*",
    "python-dotenv==1.2.*",
    "tenacity==9.1.*",
]

[dependency-groups]
dev = [
    "ruff==0.15.*",
    "google-auth-oauthlib==1.2.*",
    "google-cloud-batch==0.20.*"
]
google-cloud = [
    "google-cloud-storage==3.9.*",
    "google-cloud-aiplatform==1.136.*"
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["I", "E", "F", "B"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
